// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: change material prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from first to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-material"
>
  <div
    className=""
  >
    <article
      className="wonder-select"
    >
      <span
        className=""
      >
        shader
      </span>
      <select
        onChange={[Function]}
        value="0"
      >
        <option
          value="0"
        >
          basic_material
        </option>
        <option
          value="1"
        >
          light_material
        </option>
      </select>
    </article>
  </div>
  <div
    className=""
  >
    <article
      className="wonder-basic-material"
    >
      <article
        className="wonder-material-color"
      >
        <div
          className=""
        >
          <span
            className=""
          >
            color : 
          </span>
          <span
            className=""
          >
            #ffffff
          </span>
          <button
            className=""
            onClick={[Function]}
          >
            pick color
          </button>
        </div>
      </article>
      <article
        className="wonder-material-texture"
      >
        <div
          className="texture_ground"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
          style={
            Object {
              "opacity": "1",
            }
          }
        />
        <span
          className=""
        >
          map : 
        </span>
        <img
          src="./public/img/null.jpg"
        />
        <button
          className="texture_remove"
          onClick={[Function]}
        >
          remove
        </button>
      </article>
    </article>
  </div>
</article>
`;

exports[`redo_undo: change material prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-material"
>
  <div
    className=""
  >
    <article
      className="wonder-select"
    >
      <span
        className=""
      >
        shader
      </span>
      <select
        onChange={[Function]}
        value="0"
      >
        <option
          value="0"
        >
          basic_material
        </option>
        <option
          value="1"
        >
          light_material
        </option>
      </select>
    </article>
  </div>
  <div
    className=""
  >
    <article
      className="wonder-basic-material"
    >
      <article
        className="wonder-material-color"
      >
        <div
          className=""
        >
          <span
            className=""
          >
            color : 
          </span>
          <span
            className=""
          >
            #ffffff
          </span>
          <button
            className=""
            onClick={[Function]}
          >
            pick color
          </button>
        </div>
      </article>
      <article
        className="wonder-material-texture"
      >
        <div
          className="texture_ground"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
          style={
            Object {
              "opacity": "1",
            }
          }
        />
        <span
          className=""
        >
          map : 
        </span>
        <img
          src="./public/img/null.jpg"
        />
        <button
          className="texture_remove"
          onClick={[Function]}
        >
          remove
        </button>
      </article>
    </article>
  </div>
</article>
`;

exports[`redo_undo: change material prepare first step: set currentSceneTreeNode test undo operate test undo one step undo step which from first to zero 1`] = `
<article
  className="wonder-material"
>
  <div
    className=""
  >
    <article
      className="wonder-select"
    >
      <span
        className=""
      >
        shader
      </span>
      <select
        onChange={[Function]}
        value="1"
      >
        <option
          value="0"
        >
          basic_material
        </option>
        <option
          value="1"
        >
          light_material
        </option>
      </select>
    </article>
  </div>
  <div
    className=""
  >
    <article
      className="wonder-light-material"
    >
      <article
        className="wonder-material-color"
      >
        <div
          className=""
        >
          <span
            className=""
          >
            diffcuse color : 
          </span>
          <span
            className=""
          >
            #ffffff
          </span>
          <button
            className=""
            onClick={[Function]}
          >
            pick color
          </button>
        </div>
      </article>
      <article
        className="wonder-material-texture"
      >
        <div
          className="texture_ground"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
          style={
            Object {
              "opacity": "1",
            }
          }
        />
        <span
          className=""
        >
          diffuse map : 
        </span>
        <img
          src="./public/img/null.jpg"
        />
        <button
          className="texture_remove"
          onClick={[Function]}
        >
          remove
        </button>
      </article>
      <article
        className="wonder-light-shininess"
      >
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Shininess : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="32"
          />
        </article>
      </article>
    </article>
  </div>
</article>
`;
